# bazel-stm32

./: .bazelrc  .gitignore  MODULE.bazel  README.md
apps/blinky/: BUILD  irq_handlers.cpp  main.cpp
apps/imu/: BUILD  imu.yaml  main.cpp  syscalls.c
apps/sdcard/: BUILD  irq_handlers.cpp  main.cpp  wav_header.h
blinky/: BUILD  main.cpp  stm32f303xc.h  stm32f3xx.h  system_stm32f3xx.c
bsp/ili9341/: BUILD  ili9341.cpp  ili9341.h
bsp/led/: BUILD  led.cpp  led.h  led_array.h
bsp/pin/: BUILD  pin.cpp  pin.h  pin_array.h
bsp/sdcard/: BUILD  sdcard.cpp  sdcard.h
bsp/spi/: BUILD  chip_select.h  spi_device.cpp  spi_device.h
bsp/stm32f3discovery/: BUILD  board.cpp  board.h  gyroscope.cpp  gyroscope.h
bsp/uart/: BUILD  uart_device.cpp  uart_device.h
bsp/utility/: BUILD  utility.cpp  utility.h
fatfs/: BUILD  diskio.cpp  ffconf.h
mcu/: BUILD  board.cpp.j2  board.h.j2  geninit.py  stm32f303vctx.yaml
std_ext/: BUILD  types.h
tools/python_requirements/: BUILD  requirements.in  requirements_lock.txt
